--- a/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
@@ -6,6 +6,11 @@ keywords:
     - radiosity
     - cli
 toolName: H1A-Tool
+alerts:
+  - type: danger
+  - md:
+      en: >-
+       This is an article about the H1A Tool for use with MCC, for the legacy Tool for [Halo: Custom Edition][h1] see [Tool][]
 thanks:
   gbMichelle:
     en: Hardcoded tag patch reversing
