--- a/src/content/h1/tools/hek/guerilla/page.yml
+++ b/src/content/h1/tools/hek/guerilla/page.yml
@@ -11,7 +11,7 @@ keywords:
     - tag-editor
 toolName: Guerilla
 alerts:
-  - type: danger
+  - type: info
   - md:
       en: >-
        This is an article about the legacy Guerilla for use with [Halo: Custom Edition][h1], for the H1A Guerilla for MCC see [H1A Guerilla][h1a-guerilla]
