--- a/src/content/h1/tools/hek/tool/page.yml
+++ b/src/content/h1/tools/hek/tool/page.yml
@@ -10,7 +10,7 @@ keywords:
     - cli
 toolName: Tool
 alerts:
-  - type: danger
+  - type: info
   - md:
       en: >-
        This is an article about the legacy Tool for use with [Halo: Custom Edition][h1], for the H1A Tool for MCC see [H1A Tool][h1a-Tool]
