--- a/src/content/h1/page.yml
+++ b/src/content/h1/page.yml
@@ -6,7 +6,7 @@ keywords:
     - halo
 thanks:
   gbMichelle:
-    en: CEA/MCC lineage information
+    en: H1A/MCC lineage information
   Hasuku:
     en: Xbox modding lineage
   Kavawuvi:
