--- a/src/content/h1/tags/page.yml
+++ b/src/content/h1/tags/page.yml
@@ -12,7 +12,7 @@ thanks:
     en: Information about modified stun values in Custom Edition
 # todo: these heading IDs should be used/updated when translating this page
 headingRefs:
-  engine-ids:
+  group-ids:
     es: id-de-motor
   unused-tags-and-fields:
     es: campos-y-tags-no-utilizados
