--- a/src/content/h1/cea/page.yml
+++ b/src/content/h1/cea/page.yml
@@ -3,9 +3,9 @@ title:
 stub: true
 img: cea.jpg
 imgCaption:
-  en: CEA was released independently on Xbox 360 and under MCC for PC and Xbox One.
+  en: H1A was released independently on Xbox 360 and under MCC for PC and Xbox One.
 thanks:
   zatarita:
     en: Documenting H1A differences from PC and between versions, summarizing new formats
   Kavawuvi:
-    en: CEA BSP data base address
+    en: H1A BSP data base address
