--- a/src/data/structs/h1/tags/scenario.yml
+++ b/src/data/structs/h1/tags/scenario.yml
@@ -2498,3 +2498,10 @@ type_defs:
         meta:
           hek_max_count: 32
           max: 16
+        comments:
+          en: >-
+            The list of [BSPs][scenario_structure_bsp] belonging to this
+            scenario that can be [switched between][scenario_structure_bsp#bsp-transitions].
+            Multiplayer scenarios typically have just one, while
+            singleplayer scenarios often have multiple. This block also
+            contains information used during [map loading][map#map-loading].
