--- a/src/content/h1/tools/hek/sapien/page.yml
+++ b/src/content/h1/tools/hek/sapien/page.yml
@@ -1,5 +1,5 @@
 title:
-  en: Sapien
+  en: Sapien (Gearbox)
 img: netgame_equipment_04_large.gif
 imgCaption:
   en: Sapien being used to place item spawns in `tutorial.map`
