--- a/src/content/h1/tools/hek/tool/lm_tool/page.yml
+++ b/src/content/h1/tools/hek/tool/lm_tool/page.yml
@@ -2,12 +2,11 @@ title:
   en: LM_Tool
 img: lm_tool.jpg
 imgCaption:
-  en: LM_Tool outperforms official Tool in lightmapping
+  en: LM_Tool outperforms legacy H1CE Tool in lightmapping
 info:
-  en: >
+  en: |-
     * [Development
     thread](https://opencarnage.net/index.php?/topic/7751-lm_tool-a-version-of-tool-specifically-for-speeding-up-lightmaps/#comment-98219)
-
     *
     [Download](https://opencarnage.net/applications/core/interface/file/attachment.php?id=982)
 keywords:
