--- a/src/content/h1/tools/h1a-ek/page.yml
+++ b/src/content/h1/tools/h1a-ek/page.yml
@@ -1,6 +1,6 @@
 title:
   en: H1A Editing Kit (343i)
-img: hek.jpg
+img: h1a-ek.png
 imgCaption:
   en: >-
     [Sapien][h1a-sapien], [Guerilla][h1a-guerilla], and [Tool][h1a-tool] have returned!
