--- a/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
@@ -5,6 +5,9 @@ keywords:
   en:
     - scenario
 toolName: H1A-Sapien
+img: h1a-sapien-c20.png
+imgCaption:
+  en: The editing chapter titles on the c20 campaign scenario using H1A Sapien.
 related:
   - /h1/tools/hek/sapien
 alerts:
