--- a/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
@@ -16,8 +16,10 @@ alerts:
       en: >-
        This is an article about the H1A Sapien for use with MCC, for the legacy Sapien for [Halo: Custom Edition][h1] see [Sapien][]
 thanks:
+  num0005:
+    en: Update for H1A
   General_101:
-    en: Additional Sapien hotkey documentation
+    en: Additional Sapien hotkey documentation and update for H1A.
   The Cereal Killer:
     en: Discovering Sapien keyboard shortcuts
   kirby_422:
