Few minor fixes.

--- a/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
@@ -7,7 +7,7 @@ keywords:
 toolName: H1A-Sapien
 img: h1a-sapien-c20.png
 imgCaption:
-  en: The editing chapter titles on the c20 campaign scenario using H1A Sapien.
+  en: Editing chapter titles on the c20 campaign scenario using H1A Sapien.
 related:
   - /h1/tools/hek/sapien
 alerts:
