Add warning for not using tool_plus

--- a/src/content/h1/tools/hek/tool/tool_pro/page.yml
+++ b/src/content/h1/tools/hek/tool/tool_pro/page.yml
@@ -1,5 +1,7 @@
 title:
   en: tool_pro
 thanks:
+  Dennis:
+    en: Found malware in the application
   gbMichelle:
     en: Writing the [hex edit guide](https://pastebin.com/rNVVjyus)
