--- a/src/data/workflows/workflows.yml
+++ b/src/data/workflows/workflows.yml
@@ -111,12 +111,18 @@ workflowItems:
   H1A-Tool:
     inherit: H1A-EK
     page: h1a-tool
+    buildTypes:
+      - tags_play
   H1A-Guerilla:
     inherit: H1A-EK
     page: h1a-guerilla
+    buildTypes:
+      - tags_play
   H1A-Sapien:
     inherit: H1A-EK
     page: h1a-sapien
+    buildTypes:
+      - tags_play
   Lightmaps:
     page:  lightmaps
   Aether:
