--- a/src/content/h1/tags/continuous_damage_effect/page.yml
+++ b/src/content/h1/tags/continuous_damage_effect/page.yml
@@ -1,4 +1,9 @@
 title:
   en: continuous_damage_effect
-stub: true
 tagName: continuous_damage_effect
+img: cdmg.jpg
+imgCaption:
+  en: Extreme camera shake from a nearby [sound_scenery][] affecting the player.
+thanks:
+  Sparky:
+    en: Reversing this tag structure
