Update spheroid tag and remove it from tags workflows for H1A

--- a/src/data/structs/h1/tags/spheroid.yml
+++ b/src/data/structs/h1/tags/spheroid.yml
@@ -8,7 +8,7 @@ type_defs:
     comments:
       en: >-
         Spheroid is an unused leftover tag class from earlier in Halo's development.
-        Although references to it can be seen in the H1CE HEK, It no longer exists in
+        Although references to it can be seen in the H1CE HEK, it no longer exists in
         the [H1A-EK][].
     fields:
       - type: pad
