Add aether marker import freezing fix tip

--- a/src/content/h1/tools/aether/page.yml
+++ b/src/content/h1/tools/aether/page.yml
@@ -17,4 +17,6 @@ keywords:
 thanks:
   Reindeer:
     en: Porting Aether documentation from ModaWiki
+  aLTis:
+    en: Finding a fix for frozen marker importing
 toolName: Aether
