--- a/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
@@ -5,7 +5,7 @@ keywords:
   en:
     - scenario
 toolName: H1A-Sapien
-img: h1a-sapien-c20.png
+img: h1a-sapien-c20.jpg
 imgCaption:
   en: Editing chapter titles on the c20 campaign scenario using H1A Sapien.
 related:
